--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /__pycache__/
+Screenshot from 2024-10-11 22-58-50.png
+Screenshot from 2024-10-11 22-59-44.png
+Screenshot from 2024-10-11 23-56-51.png
